@@ -7,6 +7,8 @@ import ca.corbett.imageviewer.ui.imagesets.ImageSet;
 import javax.swing.AbstractAction;
 import java.awt.event.ActionEvent;
 import java.io.File;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * Adds the currently showing image (if any) to a specific ImageSet.
@@ -15,6 +17,8 @@ import java.io.File;
  * @since ImageViewer 2.2
  */
 public class ImageSetAddImageAction extends AbstractAction {
+
+    private static final Logger log = Logger.getLogger(ImageSetAddImageAction.class.getName());
 
     private final ImageSet imageSet;
 
@@ -36,6 +40,8 @@ public class ImageSetAddImageAction extends AbstractAction {
         }
         File file = currentImage.getImageFile();
         if (imageSet.addImageFilePath(file.getAbsolutePath())) {
+            log.log(Level.INFO, "addToImageSet: {0} added to image set {1}",
+                    new Object[]{file.getAbsolutePath(), imageSet.getFullyQualifiedName()});
             MainWindow.getInstance().rebuildMenus();
         }
     }
